--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ title: BuzzTender
 				<h1 class="editable">Welcome to BuzzTender</h1>
 				<p class="editable">The Social Networking Platform for Global Competitions, Tournaments, & Groups.</p>
 				<div class="button">
-					<a href="#donate">Make a Request</a>
+					<a href="mailto:admin@buzztender.app?subject = Feedback&body = Message">Make a Request</a>
 				</div>
 			</div>
 		</div>
@@ -18,6 +18,25 @@ title: BuzzTender
 		</div>
 	</div>
 </header>
+
+<div class="container">
+	<h2 class="editable" style="text-align: center;">BuzzTender Privacy Policy & User Agreement</h2>
+
+	<ul class="seconds">
+		<li>
+			<div class="image">{% include icons/site.html icon="privacy" %}</div>
+			<h3 class="editable">Privacy Policy</h3>
+			<p class="editable">In Final Processing. Will be available soon. </p>
+		</li>
+
+		<li>
+			<div class="image">{% include icons/site.html icon="agreement" %}</div>
+			<h3 class="editable">User Agreement</h3>
+			<p class="editable">In Final Processing. Will be available soon.</p>
+		</li>
+
+	</ul>
+</div>
 
 <div class="container">
 	<h2 class="editable" style="text-align: center;">See What the Buzz Is About</h2>
@@ -32,7 +51,7 @@ title: BuzzTender
 		<li>
 			<div class="image">{% include icons/site.html icon="economy" %}</div>
 			<h3 class="editable">Compete</h3>
-			<p class="editable">Healthy competition is the heart of what we do, our bees knees that tends to the competitive landscape we thrive in.</p>
+			<p class="editable">Healthy competition is the heart of what we do, our bees knees, that tends to the competitive landscape in which we thrive.</p>
 		</li>
 
 		<li>
@@ -51,7 +70,7 @@ title: BuzzTender
 		<div>
 			<h2 class="editable">Our Mission</h2>
 
-			<p class="editable">Competition and Connection are the base of all that we do do.</p>
+			<p class="editable">Competition and Connection are the base of all that we do.</p>
 		</div>
 	</div>
 </div>
@@ -100,17 +119,17 @@ title: BuzzTender
 <div class="container">
 	<hr>
 	<blockquote>
-		<p class="quote editable">The ultimate measure of a bee is not where he stands in moments of comfort and convenience, but where he stands at times of challenge and controversy.</p>
+		<p class="quote editable">The ultimate measure of a bee is not where he flies in moments of comfort and convenience, but where he swarms at times of challenge and controversy.</p>
 		<div class="attribute">
 			<p class="meta">
-				<!--<span class="image"><img class="editable" src="{{ site.baseurl }}/images/Final Logos_Icon_Black.png" alt="Wooly"></span>--> 
+				<span class="image"><img class="editable" src="{{ site.baseurl }}/images/bee icon-01.png" alt="Wooly"></span>
 				<span class="author editable"><strong>BuzzTender</strong></span> 
 			</p>
 		</div>
 	</blockquote>
 </div>
 
-<div class="darker">
+<!--<div class="darker">
 	<div class="container">
 		<h2 class="editable">Join us</h2>
 		<p class="editable" style="text-align: center;">Sign up to hear the latest news and progress. </p>
@@ -119,4 +138,4 @@ title: BuzzTender
 			<input type="submit" value="Sign up"/>
 		</form>
 	</div>
-</div>
+</div> -->
