Added legal stuff

--- a/index.html
+++ b/index.html
@@ -20,19 +20,25 @@ title: BuzzTender
 </header>
 
 <div class="container">
-	<h2 class="editable" style="text-align: center;">BuzzTender Privacy Policy & User Agreement</h2>
+	<h2 class="editable" style="text-align: center;">BuzzTender Privacy Policies & Guidelines</h2>
 
-	<ul class="seconds">
+	<ul class="thirds">
 		<li>
 			<div class="image">{% include icons/site.html icon="privacy" %}</div>
-			<h3 class="editable">Privacy Policy</h3>
-			<p class="editable">In Final Processing. Will be available soon. </p>
+			<h3 class="editable"><a href='legal/privacy-policy'>Privacy Policy</a></h3>
+			<p class="editable">Please see above to read our Privacy Policy.</p>
 		</li>
 
 		<li>
 			<div class="image">{% include icons/site.html icon="agreement" %}</div>
-			<h3 class="editable">User Agreement</h3>
-			<p class="editable">In Final Processing. Will be available soon.</p>
+			<h3 class="editable"><a href='legal/user-agreement'>User Agreement</a></h3>
+			<p class="editable">Please see above to read our User Agreement.</p>
+		</li>
+
+		<li>
+			<div class="image">{% include icons/site.html icon="guidelines" %}</div>
+			<h3 class="editable"><a href='legal/community-guidelines'>Community Guidelines</a></h3>
+			<p class="editable">Please see above to read our Community Agreement.</p>
 		</li>
 
 	</ul>
